# serverless-financial-pipeline

./: README.md
backend/: .env.example  Dockerfile  config.py  lambda_orchestrator.py  lambda_processor.py  local_test.py  network_test.py  pyproject.toml
backend/serverless_financial_pipeline_backend/: __init__.py
frontend/vue-project/: package-lock.json  package.json
frontend/vue-project/src/: App.vue
